fixed beans Config